--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,6 +1,6 @@
 <h1>Privacy Policy of Semenov Oleksandr</h1>
 
-<p>Semenov Oleksandr operates the https://semenovalexander.github.io website, which provides the SERVICE.</p>
+<p>Semenov Oleksandr operates the https://osemenovboyarka.github.io website, which provides the SERVICE.</p>
 
 <p>This page is used to inform website visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service, the semenovalexander.github.io website.</p>
 
